turtleart.circletwo.CircleTwo.scala.error
Erreur de compilation :
CircleTwo:6: error: not found: value i
  for(i<- i to 360){
          ^